--- a/lessons/04.html
+++ b/lessons/04.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="en">
 	<head>
-		<meta charset = "utf-8">
-		<meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name = "author" content = "Thebitspud">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="Thebitspud">
 
 		<!-- Bootstrap CSS -->
-		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
-		<link rel = "icon" type = "image/x-icon" href = "../assets/favicon.ico" />
-		<link href = "../css/guide.css" rel = "stylesheet" type = "text/css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+		<link href="../css/guide.css" rel="stylesheet" type="text/css" />
 		<title > Lesson 4 - WebDevGuide </title>
 	</head>
 
 	<body>
-		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class = "navbar-brand" href = "index.html">
-				<img src = "../assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> WebDevGuide
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
+			<a class="navbar-brand" href="index.html">
+				<img src="../assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
-			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
-				<span class = "navbar-toggler-icon"></span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class = "collapse navbar-collapse" id = "navbar-collapse">
-				<div class = "navbar-nav nav-fill w-100">
-					<a class = "nav-item nav-link" href = "../index.html"> Index </a>
-					<a class = "nav-item nav-link" href = "../intro.html"> Getting Started </a>
-					<a class = "nav-item nav-link active" href = "../lessons.html"> Lessons
-						<span class = "sr-only"> (Current Page) </span>
+			<div class="collapse navbar-collapse" id="navbar-collapse">
+				<div class="navbar-nav nav-fill w-100">
+					<a class="nav-item nav-link" href="../index.html"> Index </a>
+					<a class="nav-item nav-link" href="../intro.html"> Getting Started </a>
+					<a class="nav-item nav-link active" href="../lessons.html"> Lessons
+						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class = "nav-item nav-link" href = "../resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="../resources.html"> Resources </a>
 				</div>
 			</div>
 		</nav>
 
-		<h4 class = "text-center mt-5 display-4">Lesson 4: Quotations and Tables</h4>
-		<h5 class = "big-text">
+		<h4 class="text-center mt-5 display-4">Lesson 4: Quotations and Tables</h4>
+		<h5 class="big-text">
 			<br>
 			In lessons 2 and 3, we learned how to effectively use HTML elements and various utilities to enhance our web pages. In today's lesson, we will wrap up our HTML text modification unit by working with quotations, description lists, and tables.
 		</h5>
 		<br><hr>
 
-		<h2 class = "lesson-text mt-5">4.1: Quotes and Information<hr></h2>
+		<h2 class="lesson-text mt-5">4.1: Quotes and Information<hr></h2>
 
-		<p class = "lesson-text pt-2">
+		<p class="lesson-text pt-2">
 			<code>&lt;hr&gt;</code> : Inserts a long horizontal line through the document block.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;h1&gt;Welcome to my website!&lt;/h1&gt;
 	&lt;hr&gt;
 	&lt;p&gt;On this website, you will learn about all sorts of interesting topics!&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;hr&gt;</code> element.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;hr&gt;</code> element.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;q&gt;...&lt;/q&gt;</code> : Inserts a short inline quotation.<br>
 			<code>&lt;blockquote&gt;...&lt;/blockquote&gt;</code> : Inserts a long indented block-level quotation.<br>
 			For both of the above quotation styles, you can insert <code>cite="..."</code> to specify a source for your information.
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		Wikipedia is a &lt;q&gt;multilingual, web-based, free encyclopedia&lt;/q&gt; on the internet.
@@ -74,49 +74,49 @@
 		&lt;/blockquote&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;q&gt;</code> and <code>&lt;blockquote&gt;</code> elements.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;q&gt;</code> and <code>&lt;blockquote&gt;</code> elements.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;dfn&gt;...&lt;/dfn&gt;</code> : Italicized text that represents a term being defined. This may appear visually similar to <code>&lt;em&gt;</code>.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		In science, a &lt;dfn&gt;theory&lt;/dfn&gt; is a set of laws and principles that attempt to logically explain observations and phenomena using the scientific method.
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;dfn&gt;</code> tag.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;dfn&gt;</code> tag.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;cite&gt;...&lt;/cite&gt;</code> : Italicized text that is used to refer to another work. This may appear visually similar to <code>&lt;em&gt;</code>.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		I just read &lt;cite&gt;The Lord of the Rings&lt;/cite&gt; by J.R.R. Tolkein.
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;cite&gt;</code> tag.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;cite&gt;</code> tag.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;abbr title="..."&gt;...&lt;/abbr&gt;</code> : Defines an acronym, abbreviation, or shortened term.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		The &lt;abbr title="Flat Earth Society"&gt;FES&lt;/abbr&gt; has members all around the globe.
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;abbr&gt;</code> element to define an abbreviation.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;abbr&gt;</code> element to define an abbreviation.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;address&gt;...&lt;/address&gt;</code> : Defines the contact infromation and location of the author.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		&lt;address&gt;
@@ -129,17 +129,17 @@
 		&lt;/address&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;address&gt;</code> element to define contact information.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;address&gt;</code> element to define contact information.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<h2 class = "lesson-text mt-5">4.2: Lists and Tables<hr></h2>
+		<h2 class="lesson-text mt-5">4.2: Lists and Tables<hr></h2>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;dl&gt;...&lt;/dl&gt;</code> : A <strong>description list</strong> that contains sets of terms and definitions.<br>
 			<code>&lt;dt&gt;...&lt;/dt&gt;</code> : The <strong>description title</strong> contains the term that is being defined.<br>
 			<code>&lt;dd&gt;...&lt;/dd&gt;</code> : The <strong>description definiton</strong> contains the actual definition of the term.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;Welcome to my website!&lt;/h1&gt;
 		&lt;dl&gt;
@@ -152,17 +152,17 @@
 		&lt;/dl&gt;
 	&lt;body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Creating a description list of terms and definitions using the <code>&lt;dl&gt;</code>, <code>&lt;dt&gt;</code>, and <code>&lt;dd&gt;</code> elements.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Creating a description list of terms and definitions using the <code>&lt;dl&gt;</code>, <code>&lt;dt&gt;</code>, and <code>&lt;dd&gt;</code> elements.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;table&gt;...&lt;/table&gt;</code> : A simple <strong>table</strong> that contains rows and columns of information.<br>
 			<code>&lt;caption&gt;...&lt;/caption&gt;</code> : The <strong>title</strong> of the table.<br>
 			<code>&lt;tr&gt;...&lt;/tr&gt;</code> : A <strong>table row</strong> that contains multiple table divisions.<br>
 			<code>&lt;th&gt;...&lt;/th&gt;</code> : A <strong>table header</strong> that specifies information categories.<br>
 			<code>&lt;td&gt;...&lt;/td&gt;</code> : A <strong>table division</strong> that contains relevant data.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;Welcome to my website!&lt;/h1&gt;
 		&lt;table&gt;
@@ -195,47 +195,47 @@
 		&lt;/table>
 	&lt;body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Creating a simple table with 4 rows and 4 columns using the <code>&lt;table&gt;</code>, <code>&lt;caption&gt;</code>, <code>&lt;tr&gt;</code>, <code>&lt;th&gt;</code>, and <code>&lt;td&gt;</code> elements.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Creating a simple table with 4 rows and 4 columns using the <code>&lt;table&gt;</code>, <code>&lt;caption&gt;</code>, <code>&lt;tr&gt;</code>, <code>&lt;th&gt;</code>, and <code>&lt;td&gt;</code> elements. We will learn more about using tables once we begin our CSS unit.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<h2 class = "lesson-text mt-5">4.3: Using Reserved Characters<hr></h2>
-		<p class = "lesson-text">There are many characters that are not easy to type  or cannot be directly used in an HTML document due to interpretation issues. This includes fairly common symbols such as &amp;, &lt;, &gt;, and &quot;. Fortunately, the vast majority of these symbols can be accessed and used by calling their entity names or ids. For instance, &lt; has the designated entity name of &amp;lt;<br>
+		<h2 class="lesson-text mt-5">4.3: Using Reserved Characters<hr></h2>
+		<p class="lesson-text">There are many characters that are not easy to type  or cannot be directly used in an HTML document due to interpretation issues. This includes fairly common symbols such as &amp;, &lt;, &gt;, and &quot;. Fortunately, the vast majority of these symbols can be accessed and used by calling their entity names or ids. For instance, &lt; has the designated entity name of &amp;lt;<br>
 		<br>
 		To learn more about reserved characters or to find a list of their entity values, refer to the link below:</p>
 
-		<h4 class = "big-text text-center my-5">
-			<a href = "https://www.html.am/reference/html-special-characters.cfm" target = "_blank" class = "footer-link-blue">HTML Special Characters</a>
+		<h4 class="big-text text-center my-5">
+			<a href="https://www.html.am/reference/html-special-characters.cfm" target="_blank" class="footer-link-blue">HTML Special Characters</a>
 		</h4>
 
 		<hr>
-		<h2 class = "my-5 px-5">
-			<div class = "container-fluid px-5">
-				<div class = "row">
-					<div class = "col-lg-6 text-left">
-						<a href = "03.html" class = "footer-link-grey">&#8592; Lesson 3</a>
+		<h2 class="my-5 px-5">
+			<div class="container-fluid px-5">
+				<div class="row">
+					<div class="col-lg-6 text-left">
+						<a href="03.html" class="footer-link-grey">&#8592; Lesson 3</a>
 					</div>
 
-					<div class = "col-lg-6 text-right">
-						<!--<a href = "05.html" class = "footer-link-grey">Lesson 5 &#8594;</a>-->
+					<div class="col-lg-6 text-right">
+						<a href="05.html" class="footer-link-grey">Lesson 5 &#8594;</a>
 					</div>
 				</div>
 			</div>
 		</h2>
 		<hr>
-		<div class = "text-center mt-5">
-			<h5><a href = "https://github.com/webdevguide/webdevguide.github.io" target = "_blank" class = "footer-link-blue">WebDevGuide 2018/19</a></h5>
-			<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
+		<div class="text-center mt-5">
+			<h5><a href="https://github.com/webdevguide/webdevguide.github.io" target="_blank" class="footer-link-blue">WebDevGuide 2018/19</a></h5>
+			<a href="https://thebitspud.github.io" target="_blank" class="footer-link-grey pb-5">Site design by Thebitspud</a>
 		</div>
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin = "anonymous"></script>
-		<script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin = "anonymous"></script>
-		<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-		integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin = "anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 	</body>
 </html>
