--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,11 @@
 		<h1 class = "display-1 text-center pt-5 mb-5">Resources</h1>
 
 		<h4 class = "big-text text-center">
-			Here are some external resources that you may find useful.
+			Here are some external resources and tutorials that you may find useful.
+			<br>
+			<br><a href = "https://www.html.am/reference/html-special-characters.cfm" target = "_blank" class = "footer-link-blue">HTML Special Characters</a>
+			<br>
+			<br><a href = "https://www.w3schools.com/cssref/css_selectors.asp" target = "_blank" class = "footer-link-blue">List of CSS Selectors</a>
 			<br>
 			<br><a href = "https://developer.mozilla.org/en-US/docs/Learn" target = "_blank" class = "footer-link-blue">MDN Web Docs</a>
 			<br>
