--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="en">
 	<head>
-		<meta charset = "utf-8">
-		<meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name = "author" content = "Thebitspud">
-		<meta name = "description" content = "This is a simple site designed to help you learn and review HTML, CSS, and JavaScript.">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="Thebitspud">
+		<meta name="description" content="This is a website dedicated to helping you learn and review HTML, CSS, and JavaScript.">
 
 		<!-- Bootstrap CSS -->
-		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
-		<link rel = "icon" type = "image/x-icon" href = "assets/favicon.ico" />
-		<link href = "css/guide.css" rel = "stylesheet" type = "text/css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+		<link href="css/guide.css" rel="stylesheet" type="text/css" />
 		<title > WebDevGuide </title>
 	</head>
 
 	<body>
-		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class = "navbar-brand" href = "index.html">
-				<img src = "assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> WebDevGuide
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
+			<a class="navbar-brand" href="index.html">
+				<img src="assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
-			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
-				<span class = "navbar-toggler-icon"></span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class = "collapse navbar-collapse" id = "navbar-collapse">
-				<div class = "navbar-nav nav-fill w-100">
-					<a class = "nav-item nav-link active" href = "index.html"> Index
-						<span class = "sr-only"> (Current Page) </span>
+			<div class="collapse navbar-collapse" id="navbar-collapse">
+				<div class="navbar-nav nav-fill w-100">
+					<a class="nav-item nav-link active" href="index.html"> Index
+						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class = "nav-item nav-link" href = "intro.html"> Getting Started </a>
-					<a class = "nav-item nav-link" href = "lessons.html"> Lessons </a>
-					<a class = "nav-item nav-link" href = "resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="intro.html"> Getting Started </a>
+					<a class="nav-item nav-link" href="lessons.html"> Lessons </a>
+					<a class="nav-item nav-link" href="resources.html"> Resources </a>
 				</div>
 			</div>
 		</nav>
 
-		<h1 class = "display-1 text-center pt-5" id = "title">Welcome!</h1>
+		<h1 class="display-1 text-center pt-5" id="title">Welcome!</h1>
 
-		<h4 class = "text-center py-5 px-5 display-4" id = "subtitle">This is a website created by <a href = "https://thebitspud.github.io/" target = "_blank">thebitspud</a> (James Zhong) that is dedicated to teaching you and many others the basics of web development. </h4>
+		<h4 class="text-center py-5 px-5 display-4" id="subtitle">This is a website created by <a href="https://thebitspud.github.io/" target="_blank">thebitspud</a> (James Zhong) that is dedicated to teaching you and many others the basics of web development. </h4>
 
-		<div id = "side-group">
-			<a href = "intro.html" class = "btn btn-success btn-lg btn-block text-center">Get Started</a>
-			<a href = "lessons.html" class = "btn btn-secondary btn-lg btn-block text-center">View Lessons</a>
-			<a href = "resources.html" class = "btn btn-primary btn-lg btn-block text-center mb-5">View Reference Guides and Other Resources</a>
+		<div id="side-group">
+			<a href="intro.html" class="btn btn-success btn-lg btn-block text-center">Get Started</a>
+			<a href="lessons.html" class="btn btn-secondary btn-lg btn-block text-center">View Lessons</a>
+			<a href="resources.html" class="btn btn-primary btn-lg btn-block text-center mb-5">View Reference Guides and Other Resources</a>
 		</div>
 
 		<hr>
-		<div id = "side-group">
-			<div class = "text-center mt-5">
-				<h5><a href = "https://github.com/webdevguide/webdevguide.github.io" target = "_blank" class = "footer-link-blue">WebDevGuide 2018/19</a></h5>
-				<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
+		<div id="side-group">
+			<div class="text-center mt-5">
+				<h5><a href="https://github.com/webdevguide/webdevguide.github.io" target="_blank" class="footer-link-blue">WebDevGuide 2018/19</a></h5>
+				<a href="https://thebitspud.github.io" target="_blank" class="footer-link-grey pb-5">Site design by Thebitspud</a>
 			</div>
 		</div>
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin = "anonymous"></script>
-		<script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin = "anonymous"></script>
-		<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-		integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin = "anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 	</body>
 </html>
