--- a/lessons/03.html
+++ b/lessons/03.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 
-<html lang = "en">
+<html lang="en">
 	<head>
-		<meta charset = "utf-8">
-		<meta name = "viewport" content = "width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name = "author" content = "Thebitspud">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="author" content="Thebitspud">
 
 		<!-- Bootstrap CSS -->
-		<link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity = "sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin = "anonymous">
-		<link rel = "icon" type = "image/x-icon" href = "../assets/favicon.ico" />
-		<link href = "../css/guide.css" rel = "stylesheet" type = "text/css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+		<link href="../css/guide.css" rel="stylesheet" type="text/css" />
 		<title > Lesson 3 - WebDevGuide </title>
 	</head>
 
 	<body>
-		<nav class = "navbar navbar-expand-md navbar-dark bg-dark site-navbar">
-			<a class = "navbar-brand" href = "index.html">
-				<img src = "../assets/webdev-logo.png" width = "30" height = "30" class = "d-inline-block align-top" alt = ""> WebDevGuide
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
+			<a class="navbar-brand" href="index.html">
+				<img src="../assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
-			<button class = "navbar-toggler" type = "button" data-toggle = "collapse" data-target = "#navbar-collapse" aria-controls = "navbar-collapse" aria-expanded = "false" aria-label = "Toggle navigation">
-				<span class = "navbar-toggler-icon"></span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class = "collapse navbar-collapse" id = "navbar-collapse">
-				<div class = "navbar-nav nav-fill w-100">
-					<a class = "nav-item nav-link" href = "../index.html"> Index </a>
-					<a class = "nav-item nav-link" href = "../intro.html"> Getting Started </a>
-					<a class = "nav-item nav-link active" href = "../lessons.html"> Lessons
-						<span class = "sr-only"> (Current Page) </span>
+			<div class="collapse navbar-collapse" id="navbar-collapse">
+				<div class="navbar-nav nav-fill w-100">
+					<a class="nav-item nav-link" href="../index.html"> Index </a>
+					<a class="nav-item nav-link" href="../intro.html"> Getting Started </a>
+					<a class="nav-item nav-link active" href="../lessons.html"> Lessons
+						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class = "nav-item nav-link" href = "../resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="../resources.html"> Resources </a>
 				</div>
 			</div>
 		</nav>
 
-		<h4 class = "text-center mt-5 display-4">Lesson 3: Text Alteration and Media</h4>
-		<h5 class = "big-text">
+		<h4 class="text-center mt-5 display-4">Lesson 3: Text Alteration and Media</h4>
+		<h5 class="big-text">
 			<br>
 			In Lesson 2, we used some common HTML elements to form websites with lists and modified text. This session will build off of what you learned in the last lesson and will introduce a few new topics as well.
 		</h5>
 		<br><hr>
 
-		<h2 class = "lesson-text mt-5">3.1: Inline Text Alteration<hr></h2>
+		<h2 class="lesson-text mt-5">3.1: Inline Text Alteration<hr></h2>
 
-		<p class = "lesson-text pt-2">
+		<p class="lesson-text pt-2">
 			<code>&lt;sup&gt;...&lt;/sup&gt;</code> : Text on a web page that is superscript.<br>
 			<code>&lt;sub&gt;...&lt;/sub&gt;</code> : Text on a web page that is subscript.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		4.32 * 10&lt;sup&gt;7&lt;/sup&gt;&lt;br&gt;
@@ -56,40 +56,40 @@
 		HCO&lt;sub&gt;3&lt;/sub&gt;&lt;sup&gt;-&lt;/sup&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using superscripts and subscripts.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using superscripts and subscripts.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;small&gt;...&lt;/small&gt;</code> : Text that slightly smaller than normal.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		This text is normal...&lt;br&gt;
 		&lt;small&gt;but this text is small!&lt;/small&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;small&gt;</code> tag.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;small&gt;</code> tag.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;mark&gt;...&lt;/mark&gt;</code> : Highlighted text that denotes the significance of a specific segment in a passage.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		Remember to show up at &lt;mark&gt;7:20 AM&lt;/mark&gt; tomorrow!
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;mark&gt;</code> tag to highlight important details.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;mark&gt;</code> tag to highlight important details.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;code&gt;...&lt;/code&gt;</code> : A segment of computer code.<br>
 			<code>&lt;samp&gt;...&lt;/samp&gt;</code> : Sample output from a program or console.<br>
 			<code>&lt;kbd&gt;...&lt;/kbd&gt;</code> : Keyboard input or instructions.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		&lt;code&gt;for(int i = 0; i < 10; i++) {...}&lt;/code&gt; will iterate 10 times.&lt;br&gt;
@@ -97,25 +97,25 @@
 		Press &lt;kbd&gt;Alt+F4&lt;/kbd&gt; to pay respects.
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;code&gt;</code>, <code>&lt;samp&gt;</code>, and <code>&lt;kbd&gt;</code> tags. Although their output may appear the same initally, it's still generally a good practice to differentiate whenever possible. (We'll cover this in-depth once we get into our CSS unit)</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;code&gt;</code>, <code>&lt;samp&gt;</code>, and <code>&lt;kbd&gt;</code> tags. Although their output may appear the same initally, it's still generally a good practice to differentiate whenever possible. (We'll cover this in-depth once we get into our CSS unit)</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;var&gt;...&lt;/var&gt;</code> : Specifies a variable. This may appear visually similar to <code>&lt;em&gt;</code>.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		&lt;var&gt;y&lt;/var&gt; = &lt;var&gt;ax&lt;sup&gt;2&lt;/sup&gt;&lt;/var&gt; + &lt;var&gt;bx&lt;/var&gt; + &lt;var&gt;c&lt;/var&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;var&gt;</code> tag.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;var&gt;</code> tag.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-3">
+		<p class="lesson-text pt-3">
 			<code>&lt;pre&gt;...&lt;/pre&gt;</code> : Preformatted text that will not ignore pre-existing spaces and line breaks.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;
 		&lt;pre&gt;
@@ -126,17 +126,17 @@ s p  a   c    e     d
 		&lt;/pre&gt;
 	&lt;/body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the <code>&lt;pre&gt;</code> tag to manipulate spacing. Note that the preformatted text segment will start spacing at the exact beginning of each new line.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the <code>&lt;pre&gt;</code> tag to manipulate spacing. Note that the preformatted text segment will start spacing at the exact beginning of each new line.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<h2 class = "lesson-text mt-5">3.2: Links and Images<hr></h2>
+		<h2 class="lesson-text mt-5">3.2: Links and Images<hr></h2>
 
-		<p class = "lesson-text pt-2">
+		<p class="lesson-text pt-2">
 			<code>&lt;a href="..."&gt;...&lt;/a&gt;</code> : The <strong>anchor</strong> element creates a web link that directs the user to another site or file.
 			<br>
 			<br>The <code>href="..."</code> attribute stands for 'hyperlink reference' and is used to specify the target destination of the anchor. Additionally, you can add a <code>target="_blank"</code> attribute if you want the link to open in a separate tab. We will learn more about attributes and values once we begin our CSS unit.<br>
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;p&gt;
 		&lt;a href="index.html"&gt;Home page&lt;/a&gt;&lt;br&gt;
@@ -144,51 +144,51 @@ s p  a   c    e     d
 		&lt;a href="https://www.google.com/" target="_blank"&gt;Search it up on Google!&lt;/a&gt;
 	&lt;/p&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the anchor element to direct to existing local and external sites.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the anchor element to direct to existing local and external sites.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<p class = "lesson-text pt-2">
+		<p class="lesson-text pt-2">
 			<code>&lt;img src="..." alt="..."&gt;</code> : Displays either a local or external <strong>image</strong> on your website.
 			<br>
 			<br> The source location of the image is accessed and modified through the <code>src="..."</code> attribute, while the <code>alt="..."</code> attribute specifies alternative text if the image is missing or cannot be displayed on a web page. Furthermore the <code>width="..."</code> and <code>height="..."</code> attributes can be used to declare the exact size of the image in pixels. (We will be covering dynamic scaling later on)
 		</p>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;
-		&lt;img src="shrek.jpg" alt = "shrek"&gt;&lt;br&gt;
+		&lt;img src="shrek.jpg" alt="shrek"&gt;&lt;br&gt;
 		&lt;img src="https://www.cscassets.com/recipes/wide_cknew/wide_25335.jpg" alt="spaghetti"&gt;&lt;br&gt;
 		&lt;img src="https://www.w3.org/html/logo/img/mark-only-icon.png" alt="html5 logo" width="100" height="100"&gt;
 	&lt;/body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the customizable image element to display a variety of pictures.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the customizable image element to display a variety of pictures.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<h2 class = "lesson-text mt-5">3.3: External Embeds<hr></h2>
-		<p class = "lesson-text">An embed is an external widget that has been inserted into a web page. Many well known media sharing sites provide easy-to-use embeds that can be directly used in a web document. In this section, I will quickly cover how to use the HTML widgets provided by YouTube, Twitter, and Discord. </p>
+		<h2 class="lesson-text mt-5">3.3: External Embeds<hr></h2>
+		<p class="lesson-text">An embed is an external widget that has been inserted into a web page. Many well known media sharing sites provide easy-to-use embeds that can be directly used in a web document. In this section, I will quickly cover how to use the HTML widgets provided by YouTube, Twitter, and Discord. </p>
 
-		<h4 class = "lesson-text mt-3">YouTube:</h4>
-		<h6 class = "lesson-text font-weight-light"><br>Step 1: Pick a YouTube video of your choice.<br><br>
+		<h4 class="lesson-text mt-3">YouTube:</h4>
+		<p class="lesson-text"><br>Step 1: Pick a YouTube video of your choice.<br><br>
 		Step 2: Click the <kbd>share</kbd> icon to the right of the like/dislike buttons.<br><br>
 		Step 3: Open the <kbd>embed</kbd> menu and modify video settings as you wish.<br><br>
-		Step 4: Copy the <code>&lt;iframe&gt;</code> element provided and paste it into your HTML document.</h6>
+		Step 4: Copy the <code>&lt;iframe&gt;</code> element provided and paste it into your HTML document.</p>
 		<br>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;
 		&lt;iframe width="560" height="315" src="https://www.youtube.com/embed/DwSm4WaE168" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;
 	&lt;/body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the YouTube <code>&lt;iframe&gt;</code> embed widget.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using the YouTube <code>&lt;iframe&gt;</code> embed widget.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<h4 class = "lesson-text mt-4">Twitter:</h4>
-		<h6 class = "lesson-text font-weight-light"><br>Step 1: Go to <a href = "https://publish.twitter.com/#" class = "footer-link-blue" target = "_blank">Twitter Publish</a><br><br>
+		<h4 class="lesson-text mt-4">Twitter:</h4>
+		<p class="lesson-text"><br>Step 1: Go to <a href="https://publish.twitter.com/#" class="footer-link-blue" target="_blank">Twitter Publish</a><br><br>
 		Step 2: Copy/paste a Twitter link.<br><br>
 		Step 3: Select one of the embed options presented.<br><br>
 		Step 4: Copy the element provided and paste it into your HTML document.<br><br>
-		Step 5: If you are using a timeline, I would recommend adding the <code>data-width="..."</code> and <code>data-height="..."</code> attributes to the <code>&lt;a&gt;</code> tag to make the widget a more manageable size.</h6>
+		Step 5: If you are using a timeline, I would recommend adding the <code>data-width="..."</code> and <code>data-height="..."</code> attributes to the <code>&lt;a&gt;</code> tag to make the widget a more manageable size.</p>
 		<br>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;
 		&lt;!-- Twitter Timeline --&gt;
@@ -203,52 +203,52 @@ s p  a   c    e     d
 		&lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
 	&lt;/body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using Twitter embed widgets.</strong></p>
-		<h6 class = "lesson-text"><hr></h6>
+		<p class="lesson-text mt-3"><strong>Above: Using Twitter embed widgets.</strong></p>
+		<h6 class="lesson-text"><hr></h6>
 
-		<h4 class = "lesson-text mt-4">Discord:</h4>
-		<h6 class = "lesson-text font-weight-light"><br>Step 1: Select a Discord server that you have administrator privileges for.<br><br>
+		<h4 class="lesson-text mt-4">Discord:</h4>
+		<p class="lesson-text"><br>Step 1: Select a Discord server that you have administrator privileges for.<br><br>
 		Step 2: Right click the server icon and go to <kbd>Server Settings --> Widget</kbd><br><br>
 		Step 3: Configure widget settings as you wish and ensure <kbd>Enable Server Widget</kbd> is activated.<br><br>
-		Step 4: Copy the premade <code>&lt;iframe&gt;</code> widget provided and paste it into your HTML document.</h6>
+		Step 4: Copy the premade <code>&lt;iframe&gt;</code> widget provided and paste it into your HTML document.</p>
 		<br>
-		<pre class = "lesson-code">
+		<pre class="lesson-code">
 ...
 	&lt;body&gt;
 		&lt;iframe src="https://discordapp.com/widget?id=451972671186534426&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"&gt;&lt;/iframe&gt;
 	&lt;/body&gt;
 ...</pre>
-		<p class = "lesson-text mt-3"><strong>Above: Using the Discord embed widget.</strong></p>
+		<p class="lesson-text mt-3"><strong>Above: Using the Discord embed widget.</strong></p>
 
 		<hr>
-		<h2 class = "my-5 px-5">
-			<div class = "container-fluid px-5">
-				<div class = "row">
-					<div class = "col-lg-6 text-left">
-						<a href = "02.html" class = "footer-link-grey">&#8592; Lesson 2</a>
+		<h2 class="my-5 px-5">
+			<div class="container-fluid px-5">
+				<div class="row">
+					<div class="col-lg-6 text-left">
+						<a href="02.html" class="footer-link-grey">&#8592; Lesson 2</a>
 					</div>
 
-					<div class = "col-lg-6 text-right">
-						<a href = "04.html" class = "footer-link-grey">Lesson 4 &#8594;</a>
+					<div class="col-lg-6 text-right">
+						<a href="04.html" class="footer-link-grey">Lesson 4 &#8594;</a>
 					</div>
 				</div>
 			</div>
 		</h2>
 		<hr>
-		<div class = "text-center mt-5">
-			<h5><a href = "https://github.com/webdevguide/webdevguide.github.io" target = "_blank" class = "footer-link-blue">WebDevGuide 2018/19</a></h5>
-			<a href = "https://thebitspud.github.io" target = "_blank" class = "footer-link-grey pb-5">Site design by Thebitspud</a>
+		<div class="text-center mt-5">
+			<h5><a href="https://github.com/webdevguide/webdevguide.github.io" target="_blank" class="footer-link-blue">WebDevGuide 2018/19</a></h5>
+			<a href="https://thebitspud.github.io" target="_blank" class="footer-link-grey pb-5">Site design by Thebitspud</a>
 		</div>
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src = "https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity = "sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin = "anonymous"></script>
-		<script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-		integrity = "sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin = "anonymous"></script>
-		<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-		integrity = "sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin = "anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 	</body>
 </html>
