--- a/lessons/07.html
+++ b/lessons/07.html
@@ -8,15 +8,15 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-		<link href="css/guide.css" rel="stylesheet" type="text/css" />
-		<title > Getting Started - WebDevGuide </title>
+		<link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
+		<link href="../css/guide.css" rel="stylesheet" type="text/css" />
+		<title > Lesson 7 - WebDevGuide </title>
 	</head>
 
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
 			<a class="navbar-brand" href="index.html">
-				<img src="assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
+				<img src="../assets/webdev-logo.png" width="30" height="30" class="d-inline-block align-top" alt=""> WebDevGuide
 			</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,32 +25,39 @@
 
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<div class="navbar-nav nav-fill w-100">
-					<a class="nav-item nav-link" href="index.html"> Index </a>
-					<a class="nav-item nav-link active" href="intro.html"> Getting Started
+					<a class="nav-item nav-link" href="../index.html"> Index </a>
+					<a class="nav-item nav-link" href="../intro.html"> Getting Started </a>
+					<a class="nav-item nav-link active" href="../lessons.html"> Lessons
 						<span class="sr-only"> (Current Page) </span>
 					</a>
-					<a class="nav-item nav-link" href="lessons.html"> Lessons </a>
-					<a class="nav-item nav-link" href="resources.html"> Resources </a>
+					<a class="nav-item nav-link" href="../resources.html"> Resources </a>
 				</div>
 			</div>
 		</nav>
 
-		<h1 class="display-1 text-center pt-5 mb-5" id="title">Getting Started</h1>
-
-		<h5 class="big-text text-center mb-5" id="subtitle">
-			In our increasingly digitalized world, learning web development is a great choice regardless of who you are.
+		<h4 class="text-center mt-5 display-4">Lesson 7: </h4>
+		<h5 class="big-text">
 			<br>
-			<br>Refer to the following google slides presentation for more information on what web development is, why you should learn it, and what I will be covering on this website.
-			<br>
-			<br><a href="http://bit.ly/2IMar6r" target="_blank" class="footer-link-blue">Course Orientation</a>
-			<br>
-			<br>Alternatively, you can jump right in and begin learning by clicking the link below.
-			<br>
-			<br><a href="lessons.html" class="footer-link-blue">HTML Lessons</a>
+			Now that you have a baseline understanding of what HTML is and how to use it, we will being moving into our next unit, which is centered around the usage of CSS in stylizing web pages.
 		</h5>
+		<br><hr>
 
 		<hr>
-		<div class="text-center mt-5" id="side-group">
+		<h2 class="my-5 px-5">
+			<div class="container-fluid px-5">
+				<div class="row">
+					<div class="col-lg-6 text-left">
+						<a href="06.html" class="footer-link-grey">&#8592; Lesson 6</a>
+					</div>
+
+					<div class="col-lg-6 text-right">
+						<!--<a href="08.html" class="footer-link-grey">Lesson 8 &#8594;</a>-->
+					</div>
+				</div>
+			</div>
+		</h2>
+		<hr>
+		<div class="text-center mt-5">
 			<h5><a href="https://github.com/webdevguide/webdevguide.github.io" target="_blank" class="footer-link-blue">WebDevGuide 2018/19</a></h5>
 			<a href="https://thebitspud.github.io" target="_blank" class="footer-link-grey pb-5">Site design by Thebitspud</a>
 		</div>
